--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,5 +1,11 @@
-[controller]
-controller-node ansible_host=<controller_public_ip> ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/mykey.pem
+#!/bin/bash
+set -e
 
-[managed]
-managed-node ansible_host=<managed_public_ip> ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/mykey.pem
+# Get Managed EC2 IP from Terraform outputs
+IP=$(terraform -chdir=../terraform output -raw managed_public_ip)
+
+echo "[servers]" > inventory.ini
+echo "$IP ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/tf_key" >> inventory.ini
+
+echo "Generated inventory.ini:"
+cat inventory.ini
